{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 578,
  "lineage": "772c4ee4-c76c-4163-9071-fdaa6ba73251",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Project_Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a3db6a6bb59b68d3",
            "arn": "arn:aws:ec2:us-east-1:812428914503:instance/i-07c2ccb283437f2f0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "worker-template-eks-profile",
            "id": "i-07c2ccb283437f2f0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "amora",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-007028a76f18111da",
            "private_dns": "ip-10-0-1-125.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.125",
            "public_ip": "3.234.224.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:812428914503:key/eb91646a-ab21-4535-a05b-89527e713552",
                "throughput": 0,
                "volume_id": "vol-0e879655be41330b4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-083371710874135eb",
            "tags": {
              "Name": "Project_Server"
            },
            "tags_all": {
              "Name": "Project_Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-014f23591a2516b7a"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_ami.ubuntu",
            "module.eks.aws_eks_cluster.eks",
            "module.eks.aws_eks_node_group.node-grp",
            "module.eks.aws_iam_instance_profile.worker",
            "module.eks.aws_iam_policy.autoscaler",
            "module.eks.aws_iam_role.master",
            "module.eks.aws_iam_role.worker",
            "module.eks.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSServicePolicy",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSVPCResourceController",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.eks.aws_iam_role_policy_attachment.autoscaler",
            "module.public_subnets.aws_subnet.public",
            "module.security_group.aws_security_group.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:812428914503:internet-gateway/igw-0d17fae01f6c6d6e7",
            "id": "igw-0d17fae01f6c6d6e7",
            "owner_id": "812428914503",
            "tags": {
              "Name": "Sprints-Internet-Gateway"
            },
            "tags_all": {
              "Name": "Sprints-Internet-Gateway"
            },
            "vpc_id": "vpc-078e63eb5bf389d5f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:812428914503:subnet/subnet-083371710874135eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083371710874135eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "812428914503",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_Subnet_1"
            },
            "tags_all": {
              "Name": "Public_Subnet_1"
            },
            "vpc_id": "vpc-078e63eb5bf389d5f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "public2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:812428914503:subnet/subnet-00b99c2919410386f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b99c2919410386f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "812428914503",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_Subnet_2"
            },
            "tags_all": {
              "Name": "Public_Subnet_2"
            },
            "vpc_id": "vpc-078e63eb5bf389d5f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:812428914503:route-table/rtb-03b1f3630bcec72aa",
            "id": "rtb-03b1f3630bcec72aa",
            "owner_id": "812428914503",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d17fae01f6c6d6e7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_Route_Table"
            },
            "tags_all": {
              "Name": "Public_Route_Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-078e63eb5bf389d5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029e205c875e47bb3",
            "route_table_id": "rtb-03b1f3630bcec72aa",
            "subnet_id": "subnet-083371710874135eb"
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.main",
            "module.public_subnets.aws_subnet.public",
            "module.route_table.aws_route_table.main",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052937b5b82581983",
            "route_table_id": "rtb-03b1f3630bcec72aa",
            "subnet_id": "subnet-00b99c2919410386f"
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.main",
            "module.public_subnets.aws_subnet.public",
            "module.route_table.aws_route_table.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:812428914503:security-group/sg-014f23591a2516b7a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-014f23591a2516b7a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Sprints_Security_Group20230801202623912400000008",
            "name_prefix": "Sprints_Security_Group",
            "owner_id": "812428914503",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-078e63eb5bf389d5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:812428914503:vpc/vpc-078e63eb5bf389d5f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cd600c9465d980bd",
            "default_route_table_id": "rtb-076cba425884448ae",
            "default_security_group_id": "sg-0d41eedd32c78035a",
            "dhcp_options_id": "dopt-0f44bdb3fe8f287fa",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-078e63eb5bf389d5f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-076cba425884448ae",
            "owner_id": "812428914503",
            "tags": {
              "Name": "Sprints_Vpc"
            },
            "tags_all": {
              "Name": "Sprints_Vpc"
            }
          }
        }
      ]
    }
  ]
}